Add in intro animation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 
+<img class="slide-left intro-feature intro" src="img/icon-ghost.png" alt="Github icon" width="42" height="42">
+<div class="cover intro">
+</div>
+
 <div class="top-decoration"></div>
 
 <div class="main">
@@ -119,6 +123,7 @@
     <img src="img/icon-lightbulb.png" alt="lightbulb" width="20" height="32">
 </footer>
 
-
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
