--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="col col-primary">
             <header class="header">
-                <img class="avatar" src="img/avatar.png" alt="Tyler Pearson's avatar" width="118" height="129">
+                <img class="avatar" src="img/avatar-color.png" alt="Tyler Pearson's avatar" width="118" height="129">
 
                 <div class="header-intro">
                     <p>Hello, I’m Tyler Pearson and I’m a web developer (and occasional designer) living in beautiful San Francisco, California. I like code, design, startups, and Taco Tuesday.</p>
