Switch icons to SVG

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<img class="slide-left intro-feature intro" src="img/icon-ghost.png" alt="Github icon" width="42" height="42">
+<img class="intro-feature intro" src="img/ghost.svg" alt="Github icon" width="42" height="42">
 <div class="cover intro">
 </div>
 
@@ -34,30 +34,31 @@
                 <ul class="list-social">
                     <li>
                         <a href="#">
-                            <img src="img/icon-github.png" alt="Github icon" width="42" height="42">
+                            <img src="img/icon-github.svg" alt="Github icon" width="50" height="50">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="img/icon-twitter.png" alt="Twitter icon" width="42" height="42">
+                            <img src="img/icon-twitter.svg" alt="Twitter icon" width="50" height="50">
                         </a>
                     </li>
                 </ul>
             </header>
             <div class="box">
-                <h2 class="title"><img class="title-icon" src="img/icon-bolt.png" height="22" width="17"> About me</h2>
+                <h2 class="title"><img class="title-icon" src="img/flash.svg" height="22" width="22"> About me</h2>
                 <p>Hello, I’m Tyler Pearson and I’m a web developer (and occasional designer) living in beautiful San Francisco, California. I spend my time writing code with the awesome team at Bubblews.</p>
 
                 <p>Hello, I’m Tyler Pearson and I’m a web developer (and occasional designer) living in beautiful San Francisco, California. I spend my time writing code with the awesome team at Bubblews.</p>
             </div>
             <div class="box">
-                <h2 class="title"><img class="title-icon" src="img/icon-projects.png" height="22" width="22"> Projects</h2>
+                <h2 class="title"><img class="title-icon" src="img/blocks.svg" height="22" width="22"> Projects</h2>
+                <p>I enjoy working on a wide range of types of projects with Ruby, Rails, JavaScript, HTML, CSS, PHP and anything else that comes along.</p>
                 <p>I enjoy working on a wide range of types of projects with Ruby, Rails, JavaScript, HTML, CSS, PHP and anything else that comes along.</p>
             </div>
         </div>
         <div class="col col-secondary">
             <div class="box">
-                <h2 class="title"><img class="title-icon" src="img/icon-beaker.png" width="20" height="20"> Open Source</h2>
+                <h2 class="title"><img class="title-icon" src="img/lab.svg" width="20" height="20"> Open Source</h2>
                 <p>I try to push as much code as I can to Github in the hope that someone else will find it useful. Here are some of the projects currently up there:</p>
 
                 <div class="box-gallery">
@@ -120,7 +121,7 @@
 </div>
 
 <footer class="footer">
-    <img src="img/icon-lightbulb.png" alt="lightbulb" width="20" height="32">
+    <img src="img/ghost.svg" alt="ghost icon" width="30" height="30">
 </footer>
 
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
