Add in external social media links

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
                 <ul class="list-social">
                     <li>
-                        <a href="#">
+                        <a href="http://github.com/tylerpearson" target="_blank">
                             <img src="img/icon-github.svg" alt="Github icon" width="42" height="42">
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="http://twitter.com/tylerpearson" target="_blank">
                             <img src="img/icon-twitter.svg" alt="Twitter icon" width="42" height="42">
                         </a>
                     </li>
