--- a/index.html
+++ b/index.html
@@ -46,14 +46,21 @@
             </header>
             <div class="box">
                 <h2 class="title"><img class="title-icon" src="img/flash.svg" height="22" width="22"> About me</h2>
-                <p>Hello, I’m Tyler Pearson and I’m a web developer (and occasional designer) living in beautiful San Francisco, California. I spend my time writing code with the awesome team at Bubblews.</p>
+                <p>Nunc placerat dapibus integer. Nec cursus tempor et porttitor tincidunt aenean mattis tempor nisi quis. Placerat nisi! Dictumst aenean magna a! Et adipiscing augue dis aliquet adipiscing a, duis ultricies dignissim facilisis non magna aenean, amet, sagittis urna vel a.</p>
 
-                <p>Hello, I’m Tyler Pearson and I’m a web developer (and occasional designer) living in beautiful San Francisco, California. I spend my time writing code with the awesome team at Bubblews.</p>
+                <p>Porta est, nascetur arcu pulvinar natoque turpis mid velit cum? Arcu elit amet lacus, ac urna, montes magnis ultricies enim!</p>
+            </div>
+            <div class="box">
+                <h2 class="title"><img class="title-icon" src="img/mouse.svg" height="22" width="22"> Where I've Worked</h2>
+                <p>Nunc placerat dapibus integer. Nec cursus tempor et porttitor tincidunt aenean mattis tempor nisi quis. Placerat nisi! Dictumst aenean magna a! Et adipiscing augue dis aliquet adipiscing a, duis ultricies dignissim facilisis non magna aenean, amet, sagittis urna vel a.</p>
+
+                <p>Porta est, nascetur arcu pulvinar natoque turpis mid velit cum? Arcu elit amet lacus, ac urna, montes magnis ultricies enim!</p>
             </div>
             <div class="box">
                 <h2 class="title"><img class="title-icon" src="img/blocks.svg" height="22" width="22"> Projects</h2>
-                <p>I enjoy working on a wide range of types of projects with Ruby, Rails, JavaScript, HTML, CSS, PHP and anything else that comes along.</p>
-                <p>I enjoy working on a wide range of types of projects with Ruby, Rails, JavaScript, HTML, CSS, PHP and anything else that comes along.</p>
+                <p>Nunc placerat dapibus integer. Nec cursus tempor et porttitor tincidunt aenean mattis tempor nisi quis. Placerat nisi! Dictumst aenean magna a! Et adipiscing augue dis aliquet adipiscing a, duis ultricies dignissim facilisis non magna aenean, amet, sagittis urna vel a.</p>
+
+                <p>Porta est, nascetur arcu pulvinar natoque turpis mid velit cum? Arcu elit amet lacus, ac urna, montes magnis ultricies enim!</p>
             </div>
         </div>
         <div class="col col-secondary">
@@ -63,58 +70,88 @@
 
                 <div class="box-gallery">
                     <div class="box-gallery-item">
-                        <a href="#">
+                        <a href="https://github.com/tylerpearson/CoverPop">
                             <h3 class="box-gallery-item-title">CoverPop.js</h3>
                             <p class="box-gallery-item-preview">JavaScript plugin for setting up modal splash pages</p>
                         </a>
                     </div>
                     <div class="box-gallery-item">
-                        <a href="#">
-                            <h3 class="box-gallery-item-title">CoverPop.js</h3>
-                            <p class="box-gallery-item-preview">JavaScript plugin for setting up modal splash pages</p>
+                        <a href="https://github.com/tylerpearson/lazyYT">
+                            <h3 class="box-gallery-item-title">LazyYT</h3>
+                            <p class="box-gallery-item-preview">jQuery plugin to lazy load Youtube iframe videos</p>
                         </a>
                     </div>
                     <div class="box-gallery-item">
-                        <a href="#">
-                            <h3 class="box-gallery-item-title">CoverPop.js</h3>
-                            <p class="box-gallery-item-preview">JavaScript plugin for setting up modal splash pages</p>
+                        <a href="https://github.com/tylerpearson/twitter-most-followed-scripts">
+                            <h3 class="box-gallery-item-title">Twitter Most Followed</h3>
+                            <p class="box-gallery-item-preview">Scripts to find the most commonly followed accounts by a group of people</p>
                         </a>
                     </div>
                     <div class="box-gallery-item">
-                        <a href="#">
-                            <h3 class="box-gallery-item-title">CoverPop.js</h3>
-                            <p class="box-gallery-item-preview">JavaScript plugin for setting up modal splash pages</p>
+                        <a href="https://github.com/tylerpearson/running-maps">
+                            <h3 class="box-gallery-item-title">Running Maps</h3>
+                            <p class="box-gallery-item-preview">Scripts to generate map visualizations of the most popular running routes in a city</p>
                         </a>
                     </div>
                     <div class="box-gallery-item">
-                        <a href="#">
-                            <h3 class="box-gallery-item-title">CoverPop.js</h3>
-                            <p class="box-gallery-item-preview">JavaScript plugin for setting up modal splash pages</p>
+                        <a href="https://github.com/tylerpearson/civic_aide">
+                            <h3 class="box-gallery-item-title">CivicAide</h3>
+                            <p class="box-gallery-item-preview">Ruby gem for the Google Civic Information API</p>
                         </a>
                     </div>
                     <div class="box-gallery-item">
-                        <a href="#">
-                            <h3 class="box-gallery-item-title">CoverPop.js</h3>
-                            <p class="box-gallery-item-preview">JavaScript plugin for setting up modal splash pages</p>
+                        <a href="https://github.com/tylerpearson/frizzle">
+                            <h3 class="box-gallery-item-title">Frizzle</h3>
+                            <p class="box-gallery-item-preview">Ruby gem for the TransLoc bus tracking API</p>
+                        </a>
+                    </div>
+                    <div class="box-gallery-item">
+                        <a href="https://github.com/tylerpearson/trackping">
+                            <h3 class="box-gallery-item-title">TrackPing</h3>
+                            <p class="box-gallery-item-preview">Trackping is a web app to track follows and unfollows for accounts on Twitter</p>
+                        </a>
+                    </div>
+                    <div class="box-gallery-item">
+                        <a href="https://github.com/tylerpearson/support-map">
+                            <h3 class="box-gallery-item-title">Supporter Map</h3>
+                            <p class="box-gallery-item-preview">Rails app with Facebook integration to map supporters in a state/district</p>
                         </a>
                     </div>
                 </div>
             </div>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="#">Using Nokogiri, the Data Science Toolkit, and Github to map government data &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://tmf.tylerp.me/">The most commonly followed Twitter accounts by various groups of people &#x279e;</a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="#">Using Nokogiri, the Data Science Toolkit, and Github to map government data &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/analyzing-who-olympians-follow-on-twitter">Analyzing who Olympians follow on Twitter &#x279e;</a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="#">Using Nokogiri, the Data Science Toolkit, and Github to map government data &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/visualizing-most-popular-running-routes-in-chapel-hill-durham-and-raleigh">Visualizing where people run in Chapel Hill, Durham, and Raleigh &#x279e;</a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="#">Using Nokogiri, the Data Science Toolkit, and Github to map government data &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/civicaide">Introducing CivicAide: A Ruby gem for the Google Civic Information API &#x279e;</a></h1>
+            </article>
+            <article class="post-preview box">
+                <time class="post-preview-timestamp">06 July 2014</time>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/scraping-geocoding-mapping-government-data">Using Nokogiri, the Data Science Toolkit, and Github to map government data &#x279e;</a></h1>
+            </article>
+            <article class="post-preview box">
+                <time class="post-preview-timestamp">06 July 2014</time>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/lazyytjs-a-jquery-plugin-to-lazy-load-youtube-videos">LazyYT.js: A jQuery plugin to lazy load Youtube videos &#x279e;</a></h1>
+            </article>
+            <article class="post-preview box">
+                <time class="post-preview-timestamp">06 July 2014</time>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/introducing-statgy-a-tool-for-short-term-social-analytics-tracking-of-a-webpage">Introducing Statgy: A short-term social media share tracking tool &#x279e;</a></h1>
+            </article>
+            <article class="post-preview box">
+                <time class="post-preview-timestamp">06 July 2014</time>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/friend-the-vote-com-a-tool-to-encourage-voting-this-election-through-facebook">Introducing FriendtheVote.com: A new online tool to encourage voter participation this election through Facebook
+
+ &#x279e;</a></h1>
             </article>
         </div>
     </div>
