Add in some hover animations

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
                 <ul class="list-social">
                     <li>
-                        <a href="http://github.com/tylerpearson" target="_blank">
-                            <img src="img/icon-github.svg" alt="Github icon" width="42" height="42">
+                        <a href="http://twitter.com/tylerpearson" target="_blank">
+                            <img src="img/icon-twitter.svg" alt="Twitter icon" width="42" height="42">
                         </a>
                     </li>
                     <li>
-                        <a href="http://twitter.com/tylerpearson" target="_blank">
-                            <img src="img/icon-twitter.svg" alt="Twitter icon" width="42" height="42">
+                        <a href="http://github.com/tylerpearson" target="_blank">
+                            <img src="img/icon-github.svg" alt="Github icon" width="42" height="42">
                         </a>
                     </li>
                 </ul>
@@ -121,37 +121,35 @@
             </div>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://tmf.tylerp.me/">The most commonly followed Twitter accounts by various groups of people &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://tmf.tylerp.me/">The most commonly followed Twitter accounts by various groups of people <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/analyzing-who-olympians-follow-on-twitter">Analyzing who Olympians follow on Twitter &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/analyzing-who-olympians-follow-on-twitter">Analyzing who Olympians follow on Twitter <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/visualizing-most-popular-running-routes-in-chapel-hill-durham-and-raleigh">Visualizing where people run in Chapel Hill, Durham, and Raleigh &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/visualizing-most-popular-running-routes-in-chapel-hill-durham-and-raleigh">Visualizing where people run in Chapel Hill, Durham, and Raleigh <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/civicaide">Introducing CivicAide: A Ruby gem for the Google Civic Information API &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/civicaide">Introducing CivicAide: A Ruby gem for the Google Civic Information API <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/scraping-geocoding-mapping-government-data">Using Nokogiri, the Data Science Toolkit, and Github to map government data &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/scraping-geocoding-mapping-government-data">Using Nokogiri, the Data Science Toolkit, and Github to map government data <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/lazyytjs-a-jquery-plugin-to-lazy-load-youtube-videos">LazyYT.js: A jQuery plugin to lazy load Youtube videos &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/lazyytjs-a-jquery-plugin-to-lazy-load-youtube-videos">LazyYT.js: A jQuery plugin to lazy load Youtube videos <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/introducing-statgy-a-tool-for-short-term-social-analytics-tracking-of-a-webpage">Introducing Statgy: A short-term social media share tracking tool &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/introducing-statgy-a-tool-for-short-term-social-analytics-tracking-of-a-webpage">Introducing Statgy: A short-term social media share tracking tool <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
                 <time class="post-preview-timestamp">06 July 2014</time>
-                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/friend-the-vote-com-a-tool-to-encourage-voting-this-election-through-facebook">Introducing FriendtheVote.com: A new online tool to encourage voter participation this election through Facebook
-
- &#x279e;</a></h1>
+                <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/friend-the-vote-com-a-tool-to-encourage-voting-this-election-through-facebook">Introducing FriendtheVote.com: A new online tool to encourage voter participation this election through Facebook <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
         </div>
     </div>
