--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <img class="intro-feature intro" src="img/ghost.svg" alt="Github icon" width="42" height="42">
-<div class="cover intro">
+<div id="cover" class="cover intro">
 </div>
 
 <div class="top-decoration"></div>
@@ -159,7 +159,6 @@
     <img src="img/ghost.svg" alt="ghost icon" width="30" height="30">
 </footer>
 
-<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
