Hide loading icon after animation finishes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 </head>
 <body>
 
-<img class="intro-feature intro" src="img/ghost.svg" alt="Github icon" width="42" height="42">
-<div id="cover" class="cover intro">
-</div>
+<img id="loading-icon" class="intro-feature intro" src="img/ghost.svg" alt="Github icon" width="42" height="42">
+<div id="cover" class="cover intro"></div>
 
 <div class="top-decoration"></div>
 
