Switch to high density image for avatar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="col col-primary">
             <header class="header">
-                <img class="avatar" src="img/avatar-color.png" alt="Tyler Pearson's avatar" width="118" height="129">
+                <img class="avatar" src="img/avatar@2x.png" alt="Tyler Pearson's avatar" width="118" height="129">
 
                 <div class="header-intro">
                     <p>Hello, I’m Tyler Pearson and I’m a web developer (and occasional designer) living in beautiful San Francisco, California. I like code, design, startups, and Taco Tuesday.</p>
@@ -47,13 +47,12 @@
                 <h2 class="title"><img class="title-icon" src="img/flash.svg" height="22" width="22"> About me</h2>
                 <p>Nunc placerat dapibus integer. Nec cursus tempor et porttitor tincidunt aenean mattis tempor nisi quis. Placerat nisi! Dictumst aenean magna a! Et adipiscing augue dis aliquet adipiscing a, duis ultricies dignissim facilisis non magna aenean, amet, sagittis urna vel a.</p>
 
-                <p>Porta est, nascetur arcu pulvinar natoque turpis mid velit cum? Arcu elit amet lacus, ac urna, montes magnis ultricies enim!</p>
+                <p>Back in April, I sold nearly everything I owned and moved out to San Francisco with a suitcase and a few coding books and joined Bubblews.</p>
             </div>
             <div class="box">
                 <h2 class="title"><img class="title-icon" src="img/mouse.svg" height="22" width="22"> Where I've Worked</h2>
-                <p>Nunc placerat dapibus integer. Nec cursus tempor et porttitor tincidunt aenean mattis tempor nisi quis. Placerat nisi! Dictumst aenean magna a! Et adipiscing augue dis aliquet adipiscing a, duis ultricies dignissim facilisis non magna aenean, amet, sagittis urna vel a.</p>
 
-                <p>Porta est, nascetur arcu pulvinar natoque turpis mid velit cum? Arcu elit amet lacus, ac urna, montes magnis ultricies enim!</p>
+
             </div>
             <div class="box">
                 <h2 class="title"><img class="title-icon" src="img/blocks.svg" height="22" width="22"> Projects</h2>
@@ -119,35 +118,35 @@
                 </div>
             </div>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">20 Oct 2014</time>
                 <h1 class="post-preview-title"><a href="http://tmf.tylerp.me/">The most commonly followed Twitter accounts by various groups of people <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">21 Feb 2014</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/analyzing-who-olympians-follow-on-twitter">Analyzing who Olympians follow on Twitter <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">08 Feb 2014</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/visualizing-most-popular-running-routes-in-chapel-hill-durham-and-raleigh">Visualizing where people run in Chapel Hill, Durham, and Raleigh <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">08 Jan 2014</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/civicaide">Introducing CivicAide: A Ruby gem for the Google Civic Information API <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">02 Dec 2013</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/scraping-geocoding-mapping-government-data">Using Nokogiri, the Data Science Toolkit, and Github to map government data <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">09 Sep 2013</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/lazyytjs-a-jquery-plugin-to-lazy-load-youtube-videos">LazyYT.js: A jQuery plugin to lazy load Youtube videos <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">24 June 2013</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/introducing-statgy-a-tool-for-short-term-social-analytics-tracking-of-a-webpage">Introducing Statgy: A short-term social media share tracking tool <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
             <article class="post-preview box">
-                <time class="post-preview-timestamp">06 July 2014</time>
+                <time class="post-preview-timestamp">21 Oct 2012</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/friend-the-vote-com-a-tool-to-encourage-voting-this-election-through-facebook">Introducing FriendtheVote.com: A new online tool to encourage voter participation this election through Facebook <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
         </div>
