--- a/index.html
+++ b/index.html
@@ -45,14 +45,26 @@
             </header>
             <div class="box">
                 <h2 class="title"><img class="title-icon" src="img/flash.svg" height="22" width="22"> About me</h2>
-                <p>Nunc placerat dapibus integer. Nec cursus tempor et porttitor tincidunt aenean mattis tempor nisi quis. Placerat nisi! Dictumst aenean magna a! Et adipiscing augue dis aliquet adipiscing a, duis ultricies dignissim facilisis non magna aenean, amet, sagittis urna vel a.</p>
+                <p>I started with web development back at the end of college at West Virginia University when I realized I had no interest in pursuing what I'd majored in, accounting. (Fun fact: I've never once regreted not doing accounting.)</p>
 
-                <p>Back in April, I sold nearly everything I owned and moved out to San Francisco with a suitcase and a few coding books and joined Bubblews.</p>
+                <p>Previously I worked for a few years on the digital-side of political campaigns from local city council races up to Congress &ndash; initially with my own company, Blue Peak Digital, and later with Chapel Hill-based  New Media Campaigns. Political campaigns are the only other thing I've encountered that match the excitement of startups.</p>
+
+                <p>Wanting to try something new, I sold virtually everything I owned back in April, moved out to San Francisco, and joined some friends from college who'd founded the tech startup Bubblews.</p>
+
+                <p>When I'm not coding, I enjoy running around San Francisco, reading, and drinking cappuccinos in North Beach and beer in SoMa.</p>
             </div>
             <div class="box">
-                <h2 class="title"><img class="title-icon" src="img/mouse.svg" height="22" width="22"> Where I've Worked</h2>
+                <h2 class="title"><img class="title-icon" src="img/mouse.svg" height="22" width="22"> Work</h2>
 
+                <div class="box-inner">
+                    <img class="work-logo" src="img/logo-bubblews.svg" alt="Bubblews logo" width="40" height="40">
+                    <p><strong>CTO -</strong> At Bubblews, I handle the tech-side of a website that serves more than 250 million page views and 30 million uniques per month. Bubblews has been featured by Mashable as one of the top ten social networks on the rise with apps like Tinder, Vine, Medium, and Snapchat. Our stack is primarily PHP, Ruby, and JavaScript with MySQL.</p>
+                </div>
 
+                <div class="box-inner">
+                    <img class="work-logo" src="img/logo-nmc.png" alt="Bubblews logo" width="33" height="33">
+                    <p><strong>Web developer and designer -</strong> At New Media Campaigns, I worked on the front-end and back-end with HTML, CSS, JavaScript, Ruby, Rails, Wordpress, and Hifi for political campaigns, non-profits, and businesses. I also designed websites, primarily for political campaigns. It was a lot of fun.</p>
+                </div>
             </div>
             <div class="box">
                 <h2 class="title"><img class="title-icon" src="img/blocks.svg" height="22" width="22"> Projects</h2>
