Add footer animation

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 </div>
 
 <footer class="footer">
-    <img src="img/ghost.svg" alt="ghost icon" width="30" height="30">
+    <a target="_blank" href="http://www.youtube.com/watch?v=JU9TouRnO84"><img class="footer-icon" src="img/ghost.svg" alt="ghost icon" width="30" height="30"></a>
 </footer>
 
 <script src="js/main.js"></script>
