Include some project links

--- a/index.html
+++ b/index.html
@@ -63,14 +63,20 @@
                 <div class="box-inner">
                     <img class="work-logo" src="img/logo-nmc.png" alt="Bubblews logo" width="33" height="33">
                     <p><strong>Web developer and designer -</strong> At New Media Campaigns, I worked on the front-end and back-end with HTML, CSS, JavaScript, Ruby, Rails, Wordpress, and Hifi for political campaigns, non-profits, and businesses. I also designed websites, primarily for political campaigns. It was a lot of fun.</p>
+
+                    <ul>
+                        <li><a href="http://www.newmediacampaigns.com/work/florida-democratic-party">Florida Democratic Party</a></li>
+                        <li><a href="http://www.newmediacampaigns.com/work/house-majority-pac">House Majority PAC</a></li>
+                        <li><a href="http://www.newmediacampaigns.com/work/mark-herring">Mark Herring for Attorney General</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="box">
+<!--             <div class="box">
                 <h2 class="title"><img class="title-icon" src="img/blocks.svg" height="22" width="22"> Projects</h2>
                 <p>Nunc placerat dapibus integer. Nec cursus tempor et porttitor tincidunt aenean mattis tempor nisi quis. Placerat nisi! Dictumst aenean magna a! Et adipiscing augue dis aliquet adipiscing a, duis ultricies dignissim facilisis non magna aenean, amet, sagittis urna vel a.</p>
 
                 <p>Porta est, nascetur arcu pulvinar natoque turpis mid velit cum? Arcu elit amet lacus, ac urna, montes magnis ultricies enim!</p>
-            </div>
+            </div> -->
         </div>
         <div class="col col-secondary">
             <div class="box">
@@ -132,10 +138,10 @@
                 <time class="post-preview-timestamp">20 Oct 2014</time>
                 <h1 class="post-preview-title"><a href="http://tmf.tylerp.me/">The most commonly followed Twitter accounts by various groups of people <span class="post-preview-more">&#x279e;</span></a></h1>
             </article>
-            <article class="post-preview box">
+<!--             <article class="post-preview box">
                 <time class="post-preview-timestamp">21 Feb 2014</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/analyzing-who-olympians-follow-on-twitter">Analyzing who Olympians follow on Twitter <span class="post-preview-more">&#x279e;</span></a></h1>
-            </article>
+            </article> -->
             <article class="post-preview box">
                 <time class="post-preview-timestamp">08 Feb 2014</time>
                 <h1 class="post-preview-title"><a href="http://www.newmediacampaigns.com/blog/visualizing-most-popular-running-routes-in-chapel-hill-durham-and-raleigh">Visualizing where people run in Chapel Hill, Durham, and Raleigh <span class="post-preview-more">&#x279e;</span></a></h1>
