Add loading class to center loading animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="loading">
 
 <img id="loading-icon" class="intro-feature intro" src="img/ghost.svg" alt="Github icon" width="42" height="42">
 <div id="cover" class="cover intro"></div>
