Add webfonts with Fonts.com

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/main.css">
+
+    <script src="http://fast.fonts.net/jsapi/4c94f8ba-4608-4a36-a067-e8f022d4cb7d.js"></script>
 </head>
 <body class="loading">
 
