Temp yank fonts.com snippet

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/main.css">
-
-    <script src="http://fast.fonts.net/jsapi/4c94f8ba-4608-4a36-a067-e8f022d4cb7d.js"></script>
 </head>
 <body class="loading">
 
-<img id="loading-icon" class="intro-feature intro" src="img/ghost.svg" alt="Github icon" width="42" height="42">
+<img id="loading-icon" class="intro-feature intro" src="img/ghost.svg" alt="loading icon" width="42" height="42">
 <div id="cover" class="cover intro"></div>
 
 <div class="top-decoration"></div>
